[package]
name = "distributed-block-builder"
version = "0.1.0"
edition = "2021"

[lib]
name = "distributed_block_builder"
path = "src/main.rs"

[[bin]]
name = "start_network"
path = "examples/start_network.rs"
required-features = ["binary"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
binary = []

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
