[package]
name = "distributed_block_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]

[lib]
name = "distributed_block_builder"
path = "src/lib.rs"

[[bin]]
name = "distributed_block_builder"
path = "src/bin/main.rs"

[[example]]
name = "simple_network"
path = "examples/simple_network.rs"

[[test]]
name = "integration"
path = "tests/integration_test.rs"
